Mencoba membuat file baru

--- a/Try.ipynb
+++ b/Try.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1lNfSC7d22kMAx0lvhIBX",
+      "authorship_tag": "ABX9TyMnArxPCnj+NXmQnLPCzJ2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,16 @@
         "id": "JVkBdv8jGBPK"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import cv2 as cv\n",
+        "from google.colab.patches import cv2_imshow # for image display\n",
+        "from skimage import io\n",
+        "from skimage import transform\n",
+        "from PIL import Image\n",
+        "import matplotlib.pylab as plt"
+      ]
     }
   ]
 }
